5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1578_2897.log
== SUBMITION (2019-03-20 18:04:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(onput("Digite o numero: 4"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.201334
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/2897/main.py", line 4, in <module>
    num = int(onput("Digite o numero: 4"))
NameError: name 'onput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:05:08) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: 4"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.175372
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
